--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 <a href="https://bit.ly/4aNM1WV" class="btn">Compre aqui por R$ 9,90</a>
             </div>
             <div class="produto-card" data-name="Em Breve!">
-                <h3>Em Breve!</h3>
-                <p>Em Breve!</p>
-                <a href="#" class="btn">Em Breve!</a>
+                <h3>Treino de Atleta na Academia</h3>
+                <p>Seu treino para adquiri um físico de um atleta está aqui!</p>
+                <a href="https://bit.ly/3WKnlZK" class="btn">Compre aqui por R$ 9,90</a>
             </div>
             <div class="produto-card" data-name="Em Breve!">
                 <h3>Em Breve!</h3>
