--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
             <h2>Produtos em Destaque</h2>
             <div class="produto-card" data-name="Treino de BodyBuilder na Academia">
                 <h3>Treino de BodyBuilder na Academia</h3>
-                <p>Seu treino para adquirir um corpo de um bodybuilder está aqui!</p>
+                <p>Seu treino para adquirir um corpo de um bodybuilder está aqui! ( + Guia de alimentação)</p>
                 <a href="https://bit.ly/40ELwtT" class="btn">Compre aqui por R$ 9,90</a>
             </div>
             <div class="produto-card" data-name="Treino de BodyBuilder em Casa">
                 <h3>Treino de BodyBuilder em Casa</h3>
-                <p>Seu treino para adquiri um corpo de um bodybuilder sem precisar ir a uma academia está aqui!</p>
+                <p>Seu treino para adquiri um corpo de um bodybuilder sem precisar ir a uma academia está aqui!  ( + Guia de alimentação)</p>
                 <a href="https://bit.ly/4aNM1WV" class="btn">Compre aqui por R$ 9,90</a>
             </div>
             <div class="produto-card" data-name="Em Breve!">
                 <h3>Treino de Atleta na Academia</h3>
-                <p>Seu treino para adquiri um físico de um atleta está aqui!</p>
+                <p>Seu treino para adquiri um físico de um atleta está aqui!  ( + Guia de alimentação)</p>
                 <a href="https://bit.ly/3WKnlZK" class="btn">Compre aqui por R$ 9,90</a>
             </div>
             <div class="produto-card" data-name="Em Breve!">
