--- a/index.html
+++ b/index.html
@@ -49,12 +49,22 @@
                 <p>Seu treino para adquiri um corpo de um bodybuilder sem precisar ir a uma academia está aqui!  ( + Guia de alimentação)</p>
                 <a href="https://bit.ly/4aNM1WV" class="btn">Compre aqui por R$ 9,90</a>
             </div>
-            <div class="produto-card" data-name="Em Breve!">
+            <div class="produto-card" data-name="Treino de Atleta na Academia">
                 <h3>Treino de Atleta na Academia</h3>
                 <p>Seu treino para adquiri um físico de um atleta está aqui!  ( + Guia de alimentação)</p>
                 <a href="https://bit.ly/3WKnlZK" class="btn">Compre aqui por R$ 9,90</a>
             </div>
+            <div class="produto-card" data-name="Treino de Atleta em Casa">
+                <h3>Treino de Atleta em Casa</h3>
+                <p>Seu treino para adquirir um físico de um atleta sem precisar ir a uma academia está aqui! ( + Guia de alimentação)</p>
+                <a href="https://bit.ly/4jLCtju" class="btn">Compre aqui por R$ 9,90</a>
+            </div>
             <div class="produto-card" data-name="Em Breve!">
+                <h3>Em Breve!</h3>
+                <p>Em Breve!</p>
+                <a href="#" class="btn">Em Breve!</a>
+            </div>
+             <div class="produto-card" data-name="Em Breve!">
                 <h3>Em Breve!</h3>
                 <p>Em Breve!</p>
                 <a href="#" class="btn">Em Breve!</a>
