--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
             </div>
             <div class="produto-card" data-name="Treino de BodyBuilder em Casa">
                 <h3>Treino de BodyBuilder em Casa</h3>
-                <p>Seu treino para adquiri um corpo de um bodybuilder sem precisar ir a uma academia está aqui!  ( + Guia de alimentação)</p>
+                <p>Seu treino para adquirir um corpo de um bodybuilder sem precisar ir a uma academia está aqui!  ( + Guia de alimentação)</p>
                 <a href="https://bit.ly/4aNM1WV" class="btn">Compre aqui por R$ 9,90</a>
             </div>
             <div class="produto-card" data-name="Treino de Atleta na Academia">
                 <h3>Treino de Atleta na Academia</h3>
-                <p>Seu treino para adquiri um físico de um atleta está aqui!  ( + Guia de alimentação)</p>
+                <p>Seu treino para adquirir um físico de um atleta está aqui!  ( + Guia de alimentação)</p>
                 <a href="https://bit.ly/3WKnlZK" class="btn">Compre aqui por R$ 9,90</a>
             </div>
             <div class="produto-card" data-name="Treino de Atleta em Casa">
@@ -60,9 +60,9 @@
                 <a href="https://bit.ly/4jLCtju" class="btn">Compre aqui por R$ 9,90</a>
             </div>
             <div class="produto-card" data-name="Em Breve!">
-                <h3>Em Breve!</h3>
-                <p>Em Breve!</p>
-                <a href="#" class="btn">Em Breve!</a>
+                <h3>Treino para mmulheres na academia</h3>
+                <p>Seu treino para aumentar sua força e resistência como uma mulher! ( + Guia de alimentação) </p>
+                <a href="https://bit.ly/3CBWbxz" class="btn">Compre aqui por R$ 9,90</a>
             </div>
              <div class="produto-card" data-name="Em Breve!">
                 <h3>Em Breve!</h3>
