--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
                 <a href="https://bit.ly/3CBWbxz" class="btn">Compre aqui por R$ 9,90</a>
             </div>
              <div class="produto-card" data-name="Em Breve!">
+                <h3>Treino para mulheres sem acesso a acacdemia</h3>
+                <p>Seu treinamento como uma mulher sem precisar ir a uma academia! ( + Guia de alimentação)</p>
+                <a href="https://bit.ly/3EF7Zj5" class="btn">Compre aqui por R$ 9,90</a>
+            </div>
+            <div class="produto-card" data-name="Em Breve!">
+                <h3>Em Breve!</h3>
+                <p>Em Breve!</p>
+                <a href="#" class="btn">Em Breve!</a>
+            </div>
+            <div class="produto-card" data-name="Em Breve!">
                 <h3>Em Breve!</h3>
                 <p>Em Breve!</p>
                 <a href="#" class="btn">Em Breve!</a>
