--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <a href="https://bit.ly/4jLCtju" class="btn">Compre aqui por R$ 9,90</a>
             </div>
             <div class="produto-card" data-name="Em Breve!">
-                <h3>Treino para mmulheres na academia</h3>
+                <h3>Treino para mulheres na academia</h3>
                 <p>Seu treino para aumentar sua força e resistência como uma mulher! ( + Guia de alimentação) </p>
                 <a href="https://bit.ly/3CBWbxz" class="btn">Compre aqui por R$ 9,90</a>
             </div>
