--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
                 <a href="https://bit.ly/3EF7Zj5" class="btn">Compre aqui por R$ 9,90</a>
             </div>
             <div class="produto-card" data-name="Em Breve!">
+                <h3>Treino para pessoas gordas na academia</h3>
+                <p>Seu treino para você emagrecer e ficar em forma na academia! ( + Guia de alimentação)</p>
+                <a href="https://pay.kiwify.com.br/OcV7d6q" class="btn">Compre aqui por R$ 9,90</a>
+            </div>
+            <div class="produto-card" data-name="Em Breve!">
+                <h3>Treino para pessoas gordas sem acesso a academia</h3>
+                <p>Seu treino para você emagrecer e ficar em forma sem precisar ir a uma academia! ( + Guia de alimentação)</p>
+                <a href="https://pay.kiwify.com.br/jdySGo2" class="btn">Compre aqui por R$ 9,90</a>
+            </div>
+            <div class="produto-card" data-name="Em Breve!">
                 <h3>Em Breve!</h3>
                 <p>Em Breve!</p>
                 <a href="#" class="btn">Em Breve!</a>
