--- a/index.html
+++ b/index.html
@@ -59,25 +59,30 @@
                 <p>Seu treino para adquirir um físico de um atleta sem precisar ir a uma academia está aqui! ( + Guia de alimentação)</p>
                 <a href="https://bit.ly/4jLCtju" class="btn">Compre aqui por R$ 9,90</a>
             </div>
-            <div class="produto-card" data-name="Em Breve!">
+            <div class="produto-card" data-name="Treino para mulheres na academia">
                 <h3>Treino para mulheres na academia</h3>
                 <p>Seu treino para aumentar sua força e resistência como uma mulher! ( + Guia de alimentação) </p>
                 <a href="https://bit.ly/3CBWbxz" class="btn">Compre aqui por R$ 9,90</a>
             </div>
-             <div class="produto-card" data-name="Em Breve!">
-                <h3>Treino para mulheres sem acesso a acacdemia</h3>
+             <div class="produto-card" data-name="Treino para mulheres sem acesso a academia">
+                <h3>Treino para mulheres sem acesso a academia</h3>
                 <p>Seu treinamento como uma mulher sem precisar ir a uma academia! ( + Guia de alimentação)</p>
                 <a href="https://bit.ly/3EF7Zj5" class="btn">Compre aqui por R$ 9,90</a>
             </div>
-            <div class="produto-card" data-name="Em Breve!">
+            <div class="produto-card" data-name="Treino para pessoas gordas na academia">
                 <h3>Treino para pessoas gordas na academia</h3>
                 <p>Seu treino para você emagrecer e ficar em forma na academia! ( + Guia de alimentação)</p>
                 <a href="https://pay.kiwify.com.br/OcV7d6q" class="btn">Compre aqui por R$ 9,90</a>
             </div>
-            <div class="produto-card" data-name="Em Breve!">
+            <div class="produto-card" data-name="Treino para pessoas gordas sem acesso a academia">
                 <h3>Treino para pessoas gordas sem acesso a academia</h3>
                 <p>Seu treino para você emagrecer e ficar em forma sem precisar ir a uma academia! ( + Guia de alimentação)</p>
                 <a href="https://pay.kiwify.com.br/jdySGo2" class="btn">Compre aqui por R$ 9,90</a>
+            </div>
+            <div class="produto-card" data-name="Emagrecimento">
+                <h3>Emagrecimento</h3>
+                <p>Um e-book criado para ajudar você emagrecer durante um mês!</p>
+                <a href="https://pay.kiwify.com.br/6170B93" class="btn">Compre aqui por R$ 5,00</a>
             </div>
             <div class="produto-card" data-name="Em Breve!">
                 <h3>Em Breve!</h3>
@@ -94,7 +99,7 @@
 
     <!-- Footer -->
     <footer class="footer" id="contato">
-        <p>&copy; e-mail:davifitnessai@gmail.com | +55 (88) 99723-5688</p>
+        <p>&copy; e-mail:davibatistafoxy@gmail.com | +55 (88) 99723-5688</p>
     </footer>
 
     <!-- Script para pesquisa -->
