--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="produto-card" data-name="Treino de BodyBuilder na Academia">
                 <h3>Treino de BodyBuilder na Academia</h3>
                 <p>Seu treino para adquirir um corpo de um bodybuilder está aqui! ( + Guia de alimentação)</p>
-                <a href="https://bit.ly/40ELwtT" class="btn">Compre aqui por R$ 9,90</a>
+                <right><a href="https://bit.ly/40ELwtT" class="btn">Compre aqui por R$ 9,90</a></right>
             </div>
             <div class="produto-card" data-name="Treino de BodyBuilder em Casa">
                 <h3>Treino de BodyBuilder em Casa</h3>
