--- a/index.html
+++ b/index.html
@@ -42,42 +42,82 @@
             <div class="produto-card" data-name="Treino de BodyBuilder na Academia">
                 <h3>Treino de BodyBuilder na Academia</h3>
                 <p>Seu treino para adquirir um corpo de um bodybuilder está aqui! ( + Guia de alimentação)</p>
+                <div class="precos">
+                <!-- Novo preço à esquerda -->
+                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <!-- Preço original à direita -->
                 <a href="https://bit.ly/40ELwtT" class="btn">Compre aqui por R$ 9,90</a>
+                </div>    
             </div>
             <div class="produto-card" data-name="Treino de BodyBuilder em Casa">
                 <h3>Treino de BodyBuilder em Casa</h3>
                 <p>Seu treino para adquirir um corpo de um bodybuilder sem precisar ir a uma academia está aqui!  ( + Guia de alimentação)</p>
+                <div class="precos">
+                <!-- Novo preço à esquerda -->
+                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <!-- Preço original à direita -->
                 <a href="https://bit.ly/4aNM1WV" class="btn">Compre aqui por R$ 9,90</a>
+                </div>    
             </div>
             <div class="produto-card" data-name="Treino de Atleta na Academia">
                 <h3>Treino de Atleta na Academia</h3>
                 <p>Seu treino para adquirir um físico de um atleta está aqui!  ( + Guia de alimentação)</p>
+                <div class="precos">
+                <!-- Novo preço à esquerda -->
+                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <!-- Preço original à direita -->
                 <a href="https://bit.ly/3WKnlZK" class="btn">Compre aqui por R$ 9,90</a>
+                </div>    
             </div>
             <div class="produto-card" data-name="Treino de Atleta em Casa">
                 <h3>Treino de Atleta em Casa</h3>
                 <p>Seu treino para adquirir um físico de um atleta sem precisar ir a uma academia está aqui! ( + Guia de alimentação)</p>
+                <div class="precos">
+                <!-- Novo preço à esquerda -->
+                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <!-- Preço original à direita -->
                 <a href="https://bit.ly/4jLCtju" class="btn">Compre aqui por R$ 9,90</a>
+                </div>
             </div>
             <div class="produto-card" data-name="Treino para mulheres na academia">
                 <h3>Treino para mulheres na academia</h3>
                 <p>Seu treino para aumentar sua força e resistência como uma mulher! ( + Guia de alimentação) </p>
+                <div class="precos">
+                <!-- Novo preço à esquerda -->
+                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <!-- Preço original à direita -->
                 <a href="https://bit.ly/3CBWbxz" class="btn">Compre aqui por R$ 9,90</a>
+                </div>
             </div>
              <div class="produto-card" data-name="Treino para mulheres sem acesso a academia">
                 <h3>Treino para mulheres sem acesso a academia</h3>
                 <p>Seu treinamento como uma mulher sem precisar ir a uma academia! ( + Guia de alimentação)</p>
+                 <div class="precos">
+                <!-- Novo preço à esquerda -->
+                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <!-- Preço original à direita -->
                 <a href="https://bit.ly/3EF7Zj5" class="btn">Compre aqui por R$ 9,90</a>
+                 </div>     
             </div>
             <div class="produto-card" data-name="Treino para pessoas gordas na academia">
                 <h3>Treino para pessoas gordas na academia</h3>
                 <p>Seu treino para você emagrecer e ficar em forma na academia! ( + Guia de alimentação)</p>
+                <div class="precos">
+                <!-- Novo preço à esquerda -->
+                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <!-- Preço original à direita -->
                 <a href="https://pay.kiwify.com.br/OcV7d6q" class="btn">Compre aqui por R$ 9,90</a>
+                </div>
             </div>
             <div class="produto-card" data-name="Treino para pessoas gordas sem acesso a academia">
                 <h3>Treino para pessoas gordas sem acesso a academia</h3>
                 <p>Seu treino para você emagrecer e ficar em forma sem precisar ir a uma academia! ( + Guia de alimentação)</p>
+                <div class="precos">
+                <!-- Novo preço à esquerda -->
+                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <!-- Preço original à direita -->
                 <a href="https://pay.kiwify.com.br/jdySGo2" class="btn">Compre aqui por R$ 9,90</a>
+                </div>
             </div>
             <div class="produto-card" data-name="Emagrecimento">
                 <h3>Emagrecimento</h3>
@@ -87,12 +127,22 @@
             <div class="produto-card" data-name="Em Breve!">
                 <h3>Em Breve!</h3>
                 <p>Em Breve!</p>
+                <div class="precos">
+                <!-- Novo preço à esquerda -->
+                <a href="https://novo-link-do-preco" class="btn novo-preco">Em Breve!</a>
+                <!-- Preço original à direita -->
                 <a href="#" class="btn">Em Breve!</a>
+                </div>
             </div>
             <div class="produto-card" data-name="Em Breve!">
                 <h3>Em Breve!</h3>
                 <p>Em Breve!</p>
+                <div class="precos">
+                <!-- Novo preço à esquerda -->
+                <a href="https://novo-link-do-preco" class="btn novo-preco">Em Breve!</a>
+                <!-- Preço original à direita -->
                 <a href="#" class="btn">Em Breve!</a>
+                </div>
             </div>
         </div>
     </section>
