--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <p>Seu treino para você emagrecer e ficar em forma na academia! ( + Guia de alimentação)</p>
                 <div class="precos">
                 <!-- Novo preço à esquerda -->
-                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <a href=https://go.pepper.com.br/e0npr "" class="btn novo-preco">Compre aqui por R$ 5,00</a>
                 <!-- Preço original à direita -->
                 <a href="https://pay.kiwify.com.br/OcV7d6q" class="btn">Compre aqui por R$ 9,90</a>
                 </div>
