--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p>Seu treino para aumentar sua força e resistência como uma mulher! ( + Guia de alimentação) </p>
                 <div class="precos">
                 <!-- Novo preço à esquerda -->
-                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <a href="https://go.pepper.com.br/m44y5" class="btn novo-preco">Compre aqui por R$ 5,00</a>
                 <!-- Preço original à direita -->
                 <a href="https://bit.ly/3CBWbxz" class="btn">Compre aqui por R$ 9,90</a>
                 </div>
@@ -94,7 +94,7 @@
                 <p>Seu treinamento como uma mulher sem precisar ir a uma academia! ( + Guia de alimentação)</p>
                  <div class="precos">
                 <!-- Novo preço à esquerda -->
-                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <a href="https://go.pepper.com.br/nu4rc" class="btn novo-preco">Compre aqui por R$ 5,00</a>
                 <!-- Preço original à direita -->
                 <a href="https://bit.ly/3EF7Zj5" class="btn">Compre aqui por R$ 9,90</a>
                  </div>     
