--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p>Seu treino para adquirir um corpo de um bodybuilder está aqui! ( + Guia de alimentação)</p>
                 <div class="precos">
                 <!-- Novo preço à esquerda -->
-                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <a href="https://go.pepper.com.br/i63wi" class="btn novo-preco">Compre aqui por R$ 5,00</a>
                 <!-- Preço original à direita -->
                 <a href="https://bit.ly/40ELwtT" class="btn">Compre aqui por R$ 9,90</a>
                 </div>    
@@ -54,7 +54,7 @@
                 <p>Seu treino para adquirir um corpo de um bodybuilder sem precisar ir a uma academia está aqui!  ( + Guia de alimentação)</p>
                 <div class="precos">
                 <!-- Novo preço à esquerda -->
-                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <a href="https://go.pepper.com.br/pexea" class="btn novo-preco">Compre aqui por R$ 5,00</a>
                 <!-- Preço original à direita -->
                 <a href="https://bit.ly/4aNM1WV" class="btn">Compre aqui por R$ 9,90</a>
                 </div>    
@@ -64,7 +64,7 @@
                 <p>Seu treino para adquirir um físico de um atleta está aqui!  ( + Guia de alimentação)</p>
                 <div class="precos">
                 <!-- Novo preço à esquerda -->
-                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <a href="https://go.pepper.com.br/7qvii" class="btn novo-preco">Compre aqui por R$ 5,00</a>
                 <!-- Preço original à direita -->
                 <a href="https://bit.ly/3WKnlZK" class="btn">Compre aqui por R$ 9,90</a>
                 </div>    
@@ -74,7 +74,7 @@
                 <p>Seu treino para adquirir um físico de um atleta sem precisar ir a uma academia está aqui! ( + Guia de alimentação)</p>
                 <div class="precos">
                 <!-- Novo preço à esquerda -->
-                <a href="https://novo-link-do-preco" class="btn novo-preco">Compre aqui por R$ 5,00</a>
+                <a href="https://go.pepper.com.br/n6aqg" class="btn novo-preco">Compre aqui por R$ 5,00</a>
                 <!-- Preço original à direita -->
                 <a href="https://bit.ly/4jLCtju" class="btn">Compre aqui por R$ 9,90</a>
                 </div>
